getFrist()를 get(0)로 바꾸기 17버전으로 통일